# scratch

./: README.md  pyproject.toml
cprog/activity1-tatlong-bibe/: tatlong-bibe.py
cprog/finals-activity-1/: README.md  main.py  pyproject.toml
cprog/finals-activity-2/: README.md  main.py
cprog/finals-activity-3/: README.md  main.py
