[tool.poetry]
name = "finals-activity-1"
version = "0.1.0"
description = ""
authors = ["Chad Fernandez <contact@chadfernandez.me>"]
readme = "README.md"
packages = [{include = "finals_activity_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
